fix: fix scrollbar

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -105,20 +105,7 @@
   }
 }
 
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-::-webkit-scrollbar-track {
-  background: var(--color-background);
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--color-main);
-  border: 2px solid var(--color-background);
-}
-
-::-webkit-scrollbar-thumb:hover {
-  cursor: pointer;
-  border-color: var(--color-main);
+* {
+  scrollbar-color: var(--color-main) var(--color-background);
+  scrollbar-width: thin;
 }
